--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,9 @@ on:
   schedule:
     - cron: "15 0 * * 2"
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -35,20 +38,25 @@ jobs:
             git push
           fi
 
-      - name: Notify Telegram (always)
+      - name: Notify Telegram (success)
         if: success()
         env:
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
         run: |
+          if [ -z "${TG_BOT_TOKEN}" ] || [ -z "${TG_CHAT_ID}" ]; then
+            echo "TG secrets missing, skip"
+            exit 0
+          fi
+
           curl -s -X POST "https://api.telegram.org/bot${TG_BOT_TOKEN}/sendMessage" \
             -d chat_id="${TG_CHAT_ID}" \
-            --data-urlencode text="$(cat dist/tg_message.txt)" >/dev/null
+            --data-urlencode text="$(cat dist/tg_message.txt)" >/dev/null || true
 
           curl -s -X POST "https://api.telegram.org/bot${TG_BOT_TOKEN}/sendDocument" \
             -F chat_id="${TG_CHAT_ID}" \
             -F document=@dist/report.md \
-            -F caption="KVAS build report" >/dev/null
+            -F caption="KVAS build report" >/dev/null || true
 
       - name: Notify Telegram (failure)
         if: failure()
@@ -56,10 +64,16 @@ jobs:
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
         run: |
+          if [ -z "${TG_BOT_TOKEN}" ] || [ -z "${TG_CHAT_ID}" ]; then
+            echo "TG secrets missing, skip"
+            exit 0
+          fi
+
           RUN_URL="$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID"
+
           curl -s -X POST "https://api.telegram.org/bot${TG_BOT_TOKEN}/sendMessage" \
             -d chat_id="${TG_CHAT_ID}" \
             --data-urlencode text="🚨 KVAS Domains — сборка упала ❌
 
 🔎 Подробности:
-${RUN_URL}" >/dev/null
+${RUN_URL}" >/dev/null || true
