--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,9 +71,15 @@ jobs:
 
           RUN_URL="$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID"
 
-          curl -s -X POST "https://api.telegram.org/bot${TG_BOT_TOKEN}/sendMessage" \
-            -d chat_id="${TG_CHAT_ID}" \
-            --data-urlencode text="🚨 KVAS Domains — сборка упала ❌
+          MSG="$(cat <<'EOF'
+🚨 KVAS Domains — сборка упала ❌
 
 🔎 Подробности:
-${RUN_URL}" >/dev/null || true
+__RUN_URL__
+EOF
+)"
+          MSG="${MSG/__RUN_URL__/${RUN_URL}}"
+
+          curl -s -X POST "https://api.telegram.org/bot${TG_BOT_TOKEN}/sendMessage" \
+            -d chat_id="${TG_CHAT_ID}" \
+            --data-urlencode text="${MSG}" >/dev/null || true
