--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,8 +22,7 @@ jobs:
           python-version: "3.11"
 
       - name: Run builder
-        run: |
-          python src/build.py
+        run: python src/build.py
 
       - name: Commit dist
         run: |
@@ -44,19 +43,19 @@ jobs:
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
         run: |
-          if [ -z "${TG_BOT_TOKEN}" ] || [ -z "${TG_CHAT_ID}" ]; then
-            echo "TG secrets missing, skip"
+          if [ -z "$TG_BOT_TOKEN" ] || [ -z "$TG_CHAT_ID" ]; then
+            echo "Telegram secrets missing, skip"
             exit 0
           fi
 
-          curl -s -X POST "https://api.telegram.org/bot${TG_BOT_TOKEN}/sendMessage" \
-            -d chat_id="${TG_CHAT_ID}" \
-            --data-urlencode text="$(cat dist/tg_message.txt)" >/dev/null || true
+          curl -s -X POST "https://api.telegram.org/bot$TG_BOT_TOKEN/sendMessage" \
+            -d chat_id="$TG_CHAT_ID" \
+            --data-urlencode text="$(cat dist/tg_message.txt)" || true
 
-          curl -s -X POST "https://api.telegram.org/bot${TG_BOT_TOKEN}/sendDocument" \
-            -F chat_id="${TG_CHAT_ID}" \
+          curl -s -X POST "https://api.telegram.org/bot$TG_BOT_TOKEN/sendDocument" \
+            -F chat_id="$TG_CHAT_ID" \
             -F document=@dist/report.md \
-            -F caption="KVAS build report" >/dev/null || true
+            -F caption="KVAS build report" || true
 
       - name: Notify Telegram (failure)
         if: failure()
@@ -64,22 +63,16 @@ jobs:
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
         run: |
-          if [ -z "${TG_BOT_TOKEN}" ] || [ -z "${TG_CHAT_ID}" ]; then
-            echo "TG secrets missing, skip"
+          if [ -z "$TG_BOT_TOKEN" ] || [ -z "$TG_CHAT_ID" ]; then
+            echo "Telegram secrets missing, skip"
             exit 0
           fi
 
           RUN_URL="$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID"
 
-          MSG="$(cat <<'EOF'
-🚨 KVAS Domains — сборка упала ❌
+          curl -s -X POST "https://api.telegram.org/bot$TG_BOT_TOKEN/sendMessage" \
+            -d chat_id="$TG_CHAT_ID" \
+            --data-urlencode text="🚨 KVAS Domains — сборка упала ❌
 
 🔎 Подробности:
-__RUN_URL__
-EOF
-)"
-          MSG="${MSG/__RUN_URL__/${RUN_URL}}"
-
-          curl -s -X POST "https://api.telegram.org/bot${TG_BOT_TOKEN}/sendMessage" \
-            -d chat_id="${TG_CHAT_ID}" \
-            --data-urlencode text="${MSG}" >/dev/null || true
+$RUN_URL" || true
