--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: build-kvas-list
 on:
   workflow_dispatch:
   schedule:
-    - cron: "15 0 * * 2"
+    - cron: "15 0 * * 2"   # Вторник 03:15 Москва (00:15 UTC)
 
 permissions:
   contents: write
@@ -22,18 +22,17 @@ jobs:
           python-version: "3.11"
 
       - name: Run builder
-        run: |
-          python src/build.py
+        run: python src/build.py
 
       - name: Commit dist
         run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions@users.noreply.github.com"
           git add -A dist
           if git diff --cached --quiet; then
             echo "No changes to commit"
           else
-            git config user.name "github-actions[bot]"
-            git config user.email "github-actions[bot]@users.noreply.github.com"
-            git commit -m "update domains + report"
+            git commit -m "Update domain lists"
             git push
           fi
 
@@ -44,18 +43,14 @@ jobs:
           TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
         run: |
           if [ -z "$TG_BOT_TOKEN" ] || [ -z "$TG_CHAT_ID" ]; then
-            echo "Telegram secrets missing, skip"
+            echo "Telegram secrets missing"
             exit 0
           fi
 
-          curl -s -X POST "https://api.telegram.org/bot$TG_BOT_TOKEN/sendMessage" \
-            -d chat_id="$TG_CHAT_ID" \
-            --data-urlencode text="$(cat dist/tg_message.txt)" || true
-
-          curl -s -X POST "https://api.telegram.org/bot$TG_BOT_TOKEN/sendDocument" \
+          curl -s -X POST "https://api.telegram.org/bot${TG_BOT_TOKEN}/sendDocument" \
             -F chat_id="$TG_CHAT_ID" \
             -F document=@dist/report.md \
-            -F caption="KVAS build report" || true
+            -F caption="KVAS Domains — сборка успешно выполнена"
 
       - name: Notify Telegram (failure)
         if: failure()
@@ -64,15 +59,15 @@ jobs:
           TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
         run: |
           if [ -z "$TG_BOT_TOKEN" ] || [ -z "$TG_CHAT_ID" ]; then
-            echo "Telegram secrets missing, skip"
+            echo "Telegram secrets missing"
             exit 0
           fi
 
-          RUN_URL="$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID"
+          RUN_URL="${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}"
 
-          curl -s -X POST "https://api.telegram.org/bot$TG_BOT_TOKEN/sendMessage" \
+          curl -s -X POST "https://api.telegram.org/bot${TG_BOT_TOKEN}/sendMessage" \
             -d chat_id="$TG_CHAT_ID" \
-            --data-urlencode text="🚨 KVAS Domains — сборка упала ❌
+            --data-urlencode text="KVAS Domains — сборка упала ❌
 
-🔎 Подробности:
-$RUN_URL" || true
+Подробности:
+${RUN_URL}"
