--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,7 @@ name: build-kvas-list
 on:
   workflow_dispatch:
   schedule:
+    # 03:15 МСК = 00:15 UTC
     - cron: "15 0 * * 2"
 
 permissions:
@@ -29,30 +30,58 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions@users.noreply.github.com"
+
           git add -A dist
 
           if git diff --cached --quiet; then
-            echo "No changes to commit"
-          else
-            git commit -m "Update domain lists"
-            git push
+            echo "No changes"
+            exit 0
           fi
 
-      - name: Notify Telegram (success)
+          git commit -m "Update domain lists"
+          git push
+
+      - name: Notify Telegram (report)
         if: success()
         env:
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
         run: |
           if [ -z "$TG_BOT_TOKEN" ] || [ -z "$TG_CHAT_ID" ]; then
-            echo "Telegram secrets missing, skip"
+            echo "Telegram secrets missing"
             exit 0
+          fi
+
+          if [ -f dist/tg_message.txt ]; then
+            CAPTION="$(cat dist/tg_message.txt)"
+          else
+            CAPTION="KVAS Domains — сборка завершена"
           fi
 
           curl -s -X POST "https://api.telegram.org/bot${TG_BOT_TOKEN}/sendDocument" \
             -F chat_id="$TG_CHAT_ID" \
             -F document=@dist/report.md \
-            -F caption="KVAS Domains — сборка успешно выполнена" >/dev/null || true
+            -F caption="$CAPTION" >/dev/null || true
+
+      - name: Notify Telegram (alerts)
+        if: success()
+        env:
+          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
+          TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
+        run: |
+          if [ -z "$TG_BOT_TOKEN" ] || [ -z "$TG_CHAT_ID" ]; then
+            echo "Telegram secrets missing"
+            exit 0
+          fi
+
+          if [ ! -f dist/tg_alert.txt ]; then
+            echo "No alerts"
+            exit 0
+          fi
+
+          curl -s -X POST "https://api.telegram.org/bot${TG_BOT_TOKEN}/sendMessage" \
+            -d chat_id="$TG_CHAT_ID" \
+            --data-urlencode text="$(cat dist/tg_alert.txt)" >/dev/null || true
 
       - name: Notify Telegram (failure)
         if: failure()
@@ -61,7 +90,7 @@ jobs:
           TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
         run: |
           if [ -z "$TG_BOT_TOKEN" ] || [ -z "$TG_CHAT_ID" ]; then
-            echo "Telegram secrets missing, skip"
+            echo "Telegram secrets missing"
             exit 0
           fi
 
