--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,10 @@
+
 name: build-kvas-list
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 */6 * * *"
-
-permissions:
-  contents: write
+    - cron: '0 */6 * * *'
 
 jobs:
   build:
@@ -19,96 +17,56 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install requests
+          python-version: '3.11'
 
       - name: Run builder + report
         run: |
           python src/build.py
           python src/report.py
 
-      - name: Commit dist
+      - name: Notify Telegram (unified format)
+        if: success()
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add dist/
-          git diff --cached --quiet || git commit -m "Update domain lists"
-          git push
+          DATE=$(date '+%d.%m.%Y')
+          TIME=$(date '+%H:%M:%S МСК')
 
-      - name: Notify Telegram (report)
-        if: always()
-        env:
-          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
-          TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
-        run: |
-          python - << 'PY'
-          import os, pathlib, requests
-          token = os.environ["TG_BOT_TOKEN"]
-          chat_id = os.environ["TG_CHAT_ID"]
+          TEXT="🧩 KVAS • GitHub Actions
+━━━━━━━━━━━━━━━━━━
+🟢 ПРИОРИТЕТ: НИЗКИЙ
+🚀 Сборка завершена
+🟢 Система стабильна
 
-          caption_path = pathlib.Path("dist/tg_message.txt")
-          report_path = pathlib.Path("dist/report.md")
+🗓 ${DATE}
+🕒 ${TIME}
 
-          if not caption_path.exists() or not report_path.exists():
-              raise SystemExit("Telegram files missing")
+📊 $(jq -r '.final_total') / $(jq -r '.limit') ($(jq -r '.limit_percent')%)
 
-          caption = caption_path.read_text(encoding="utf-8")
+📈 ТРЕНД
+Среднее (7): $(jq -r '.trend_avg')
+Δ к прошлой: $(jq -r '.trend_delta')
 
-          url = f"https://api.telegram.org/bot{token}/sendDocument"
-          with report_path.open("rb") as f:
-              requests.post(url, data={
-                  "chat_id": chat_id,
-                  "caption": caption,
-                  "disable_web_page_preview": "true"
-              }, files={"document": f})
-          PY
+🔐 sha256: $(jq -r '.sha256_short')
 
-      - name: Notify Telegram (alerts)
-        if: always()
-        env:
-          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
-          TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
-        run: |
-          python - << 'PY'
-          import os, pathlib, requests
-          token = os.environ["TG_BOT_TOKEN"]
-          chat_id = os.environ["TG_CHAT_ID"]
+🔗 Отчёт:
+https://github.com/${{ github.repository }}/blob/main/dist/report.md"
 
-          alert_path = pathlib.Path("dist/tg_alert.txt")
-          if not alert_path.exists():
-              raise SystemExit(0)
-
-          text = alert_path.read_text(encoding="utf-8").strip()
-          if not text:
-              raise SystemExit(0)
-
-          url = f"https://api.telegram.org/bot{token}/sendMessage"
-          requests.post(url, data={
-              "chat_id": chat_id,
-              "text": text,
-              "disable_web_page_preview": "true"
-          })
-          PY
+          curl -s -X POST https://api.telegram.org/bot${{ secrets.TG_BOT_TOKEN }}/sendMessage             -d chat_id=${{ secrets.TG_CHAT_ID }}             -d text="$TEXT"
 
       - name: Notify Telegram (failure)
         if: failure()
-        env:
-          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
-          TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
         run: |
-          python - << 'PY'
-          import os, requests
-          token = os.environ["TG_BOT_TOKEN"]
-          chat_id = os.environ["TG_CHAT_ID"]
+          DATE=$(date '+%d.%m.%Y')
+          TIME=$(date '+%H:%M:%S МСК')
 
-          url = f"https://api.telegram.org/bot{token}/sendMessage"
-          text = "🚨 Workflow упал до формирования отчёта. Проверь GitHub Actions."
-          requests.post(url, data={
-              "chat_id": chat_id,
-              "text": text
-          })
-          PY
+          TEXT="🧩 KVAS • GitHub Actions
+━━━━━━━━━━━━━━━━━━
+🔴 ПРИОРИТЕТ: ВЫСОКИЙ
+🚨 Сборка завершена с ошибками
+
+🗓 ${DATE}
+🕒 ${TIME}
+
+⚠ Проверь Actions:
+https://github.com/${{ github.repository }}/actions"
+
+          curl -s -X POST https://api.telegram.org/bot${{ secrets.TG_BOT_TOKEN }}/sendMessage             -d chat_id=${{ secrets.TG_CHAT_ID }}             -d text="$TEXT"
