--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,10 +11,12 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          persist-credentials: true
+          fetch-depth: 0
 
       - name: Setup Python
         uses: actions/setup-python@v5
@@ -34,7 +36,7 @@ jobs:
           git diff --cached --quiet || git commit -m "Update domain lists"
           git push
 
-      # ✅ Только текстовое уведомление (без отправки файла report.md)
+      # ✅ Только текст: берём содержимое dist/tg_message.txt (без отправки файла report.md)
       - name: Notify Telegram (report)
         if: always()
         env:
@@ -53,7 +55,6 @@ jobs:
 
           curl -sS -X POST "https://api.telegram.org/bot${TG_BOT_TOKEN}/sendMessage"             -d "chat_id=${TG_CHAT_ID}"             --data-urlencode "text@dist/tg_message.txt"             -d "disable_web_page_preview=true" >/dev/null
 
-      # (опционально) отдельное алерт-сообщение, если dist/tg_alert.txt существует и не пустой
       - name: Notify Telegram (alerts)
         if: always()
         env:
