--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,7 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -36,7 +37,7 @@ jobs:
           git diff --cached --quiet || git commit -m "Update domain lists"
           git push
 
-      # ✅ Только текст: берём содержимое dist/tg_message.txt (без отправки файла report.md)
+      # ---- Telegram: report (always) ----
       - name: Notify Telegram (report)
         if: always()
         env:
@@ -44,50 +45,45 @@ jobs:
           TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
         run: |
           if [ -z "${TG_BOT_TOKEN}" ] || [ -z "${TG_CHAT_ID}" ]; then
-            echo "TG_BOT_TOKEN/TG_CHAT_ID not set; skip"
+            echo "TG secrets not set; skip"
             exit 0
           fi
-
           if [ ! -s "dist/tg_message.txt" ]; then
             echo "dist/tg_message.txt missing/empty; skip"
             exit 0
           fi
 
-          curl -sS -X POST "https://api.telegram.org/bot${TG_BOT_TOKEN}/sendMessage"             -d "chat_id=${TG_CHAT_ID}"             --data-urlencode "text@dist/tg_message.txt"             -d "disable_web_page_preview=true" >/dev/null
+          curl -sS -X POST "https://api.telegram.org/bot${TG_BOT_TOKEN}/sendMessage" \
+            -d "chat_id=${TG_CHAT_ID}" \
+            --data-urlencode "text@dist/tg_message.txt" \
+            -d "disable_web_page_preview=true" >/dev/null
 
+      # ---- Telegram: alerts (always, optional) ----
       - name: Notify Telegram (alerts)
         if: always()
         env:
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
         run: |
-          if [ -z "${TG_BOT_TOKEN}" ] || [ -z "${TG_CHAT_ID}" ]; then
-            exit 0
-          fi
+          if [ -z "${TG_BOT_TOKEN}" ] || [ -z "${TG_CHAT_ID}" ]; then exit 0; fi
+          if [ ! -s "dist/tg_alert.txt" ]; then exit 0; fi
 
-          if [ ! -s "dist/tg_alert.txt" ]; then
-            exit 0
-          fi
+          curl -sS -X POST "https://api.telegram.org/bot${TG_BOT_TOKEN}/sendMessage" \
+            -d "chat_id=${TG_CHAT_ID}" \
+            --data-urlencode "text@dist/tg_alert.txt" \
+            -d "disable_web_page_preview=true" >/dev/null
 
-          curl -sS -X POST "https://api.telegram.org/bot${TG_BOT_TOKEN}/sendMessage"             -d "chat_id=${TG_CHAT_ID}"             --data-urlencode "text@dist/tg_alert.txt"             -d "disable_web_page_preview=true" >/dev/null
-
+      # ---- Telegram: failure (only on fail, optional) ----
       - name: Notify Telegram (failure)
         if: failure()
         env:
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
         run: |
-          if [ -z "${TG_BOT_TOKEN}" ] || [ -z "${TG_CHAT_ID}" ]; then
-            exit 0
-          fi
+          if [ -z "${TG_BOT_TOKEN}" ] || [ -z "${TG_CHAT_ID}" ]; then exit 0; fi
+          if [ ! -s "dist/tg_failure.txt" ]; then exit 0; fi
 
-          TEXT="📦 BUILD SYSTEM
-🔴 GitHub Actions
-━━━━━━━━━━━━━━━━━━
-🔴 ПРИОРИТЕТ: ВЫСОКИЙ
-🚨 Workflow упал до формирования отчёта.
-
-🔗 Actions:
-https://github.com/${GITHUB_REPOSITORY}/actions"
-
-          curl -sS -X POST "https://api.telegram.org/bot${TG_BOT_TOKEN}/sendMessage"             -d "chat_id=${TG_CHAT_ID}"             --data-urlencode "text=${TEXT}"             -d "disable_web_page_preview=true" >/dev/null
+          curl -sS -X POST "https://api.telegram.org/bot${TG_BOT_TOKEN}/sendMessage" \
+            -d "chat_id=${TG_CHAT_ID}" \
+            --data-urlencode "text@dist/tg_failure.txt" \
+            -d "disable_web_page_preview=true" >/dev/null
