--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,43 +15,41 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          persist-credentials: true
-          fetch-depth: 0
 
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Run builder + report
+      - name: Build lists
         run: |
           python src/build.py
+
+      - name: Generate report + telegram text
+        run: |
           python src/report.py
 
       - name: Commit dist
         run: |
           git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add dist/
-          git diff --cached --quiet || git commit -m "Update domain lists"
+          if git diff --cached --quiet; then
+            echo "No changes to commit."
+            exit 0
+          fi
+          git commit -m "Update domain lists"
           git push
 
-      # ---- Telegram: report (always) ----
-      - name: Notify Telegram (report)
+      # ---- Telegram: message (always, optional) ----
+      - name: Notify Telegram (message)
         if: always()
         env:
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
         run: |
-          if [ -z "${TG_BOT_TOKEN}" ] || [ -z "${TG_CHAT_ID}" ]; then
-            echo "TG secrets not set; skip"
-            exit 0
-          fi
-          if [ ! -s "dist/tg_message.txt" ]; then
-            echo "dist/tg_message.txt missing/empty; skip"
-            exit 0
-          fi
+          if [ -z "${TG_BOT_TOKEN}" ] || [ -z "${TG_CHAT_ID}" ]; then exit 0; fi
+          if [ ! -s "dist/tg_message.txt" ]; then exit 0; fi
 
           curl -sS -X POST "https://api.telegram.org/bot${TG_BOT_TOKEN}/sendMessage" \
             -d "chat_id=${TG_CHAT_ID}" \
@@ -71,19 +69,4 @@ jobs:
           curl -sS -X POST "https://api.telegram.org/bot${TG_BOT_TOKEN}/sendMessage" \
             -d "chat_id=${TG_CHAT_ID}" \
             --data-urlencode "text@dist/tg_alert.txt" \
-            -d "disable_web_page_preview=true" >/dev/null
-
-      # ---- Telegram: failure (only on fail, optional) ----
-      - name: Notify Telegram (failure)
-        if: failure()
-        env:
-          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
-          TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
-        run: |
-          if [ -z "${TG_BOT_TOKEN}" ] || [ -z "${TG_CHAT_ID}" ]; then exit 0; fi
-          if [ ! -s "dist/tg_failure.txt" ]; then exit 0; fi
-
-          curl -sS -X POST "https://api.telegram.org/bot${TG_BOT_TOKEN}/sendMessage" \
-            -d "chat_id=${TG_CHAT_ID}" \
-            --data-urlencode "text@dist/tg_failure.txt" \
             -d "disable_web_page_preview=true" >/dev/null
